--- a/Agroculture/MainWindow.xaml
+++ b/Agroculture/MainWindow.xaml
@@ -5,8 +5,70 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Agroculture"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+         Title="Fertilizer Calculator" Height="450" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <!-- Список полів -->
+        <StackPanel Grid.Column="0" Background="#EEE">
+            <TextBlock Text="Поля" FontWeight="Bold" Margin="10"/>
+            <ListBox x:Name="FieldsListBox" Margin="10" DisplayMemberPath="Name" SelectionChanged="FieldsListBox_SelectionChanged" />
+            <Button Content="Додати поле" Margin="10" Click="AddField_Click"/>
+            <Button Content="Видалити поле" Margin="10" Click="DeleteField_Click"/>
+        </StackPanel>
+        <!-- Деталі поля -->
+        <StackPanel Grid.Column="1" Margin="10">
+            <TextBlock Text="Деталі поля" FontWeight="Bold" FontSize="14" Margin="0,0,0,10"/>
+
+            <StackPanel Orientation="Horizontal" Margin="0,5">
+                <TextBlock Text="Назва:" Width="100"/>
+                <TextBox x:Name="FieldNameTextBox" Width="200"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" Margin="0,5">
+                <TextBlock Text="Площа (га):" Width="100"/>
+                <TextBox x:Name="FieldAreaTextBox" Width="200"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" Margin="0,5">
+                <TextBlock Text="Тип ґрунту:" Width="100"/>
+                <ComboBox x:Name="SoilComboBox" Width="200" SelectionChanged="SoilComboBox_SelectionChanged"/>
+            </StackPanel>
+
+            <!-- Значення поживних речовин -->
+            <StackPanel Orientation="Horizontal" Margin="0,5">
+                <TextBlock Text="N:" Width="100"/>
+                <TextBox x:Name="CurrentNTextBox" Width="200"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" Margin="0,5">
+                <TextBlock Text="P₂O₅:" Width="100"/>
+                <TextBox x:Name="CurrentP2O5TextBox" Width="200"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" Margin="0,5">
+                <TextBlock Text="K₂O:" Width="100"/>
+                <TextBox x:Name="CurrentK2OTextBox" Width="200"/>
+            </StackPanel>
+
+            <!-- Культури -->
+            <StackPanel Orientation="Horizontal" Margin="0,5">
+                <TextBlock Text="Поточна культура:" Width="100"/>
+                <ComboBox x:Name="CurrentCropComboBox" Width="200" DisplayMemberPath="Name"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" Margin="0,5">
+                <TextBlock Text="Минула культура:" Width="100"/>
+                <ComboBox x:Name="PastCropComboBox" Width="200" DisplayMemberPath="Name"/>
+            </StackPanel>
+
+            <!-- Кнопки -->
+            <StackPanel Orientation="Horizontal" Margin="10">
+                <Button Content="Зберегти" Width="100" Click="SaveField_Click"/>
+                <Button Content="Розрахувати" Width="100" Margin="10,0,0,0" Click="Calculate_Click"/>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Window>
