--- a/Agroculture/MainWindow.xaml
+++ b/Agroculture/MainWindow.xaml
@@ -5,37 +5,40 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Agroculture"
         mc:Ignorable="d"
-         Title="Fertilizer Calculator" Height="450" Width="800">
+        Title="Fertilizer Calculator" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <!-- Список полів -->
+        <!-- Ліва панель: Список полів та кнопки -->
         <StackPanel Grid.Column="0" Background="#EEE">
             <TextBlock Text="Поля" FontWeight="Bold" Margin="10"/>
-            <ListBox x:Name="FieldsListBox" Margin="10" DisplayMemberPath="Name" SelectionChanged="FieldsListBox_SelectionChanged" />
+            <ListBox x:Name="FieldsListBox" Margin="10" DisplayMemberPath="Name" SelectionChanged="FieldsListBox_SelectionChanged"/>
             <Button Content="Додати поле" Margin="10" Click="AddField_Click"/>
             <Button Content="Видалити поле" Margin="10" Click="DeleteField_Click"/>
         </StackPanel>
-        <!-- Деталі поля -->
+        <!-- Права панель: Деталі поля -->
         <StackPanel Grid.Column="1" Margin="10">
             <TextBlock Text="Деталі поля" FontWeight="Bold" FontSize="14" Margin="0,0,0,10"/>
 
+            <!-- Назва поля -->
             <StackPanel Orientation="Horizontal" Margin="0,5">
                 <TextBlock Text="Назва:" Width="100"/>
                 <TextBox x:Name="FieldNameTextBox" Width="200" LostFocus="FieldDetails_LostFocus"/>
             </StackPanel>
 
+            <!-- Площа поля -->
             <StackPanel Orientation="Horizontal" Margin="0,5">
                 <TextBlock Text="Площа (га):" Width="100"/>
                 <TextBox x:Name="FieldAreaTextBox" Width="200" LostFocus="FieldDetails_LostFocus"/>
             </StackPanel>
 
+            <!-- Тип ґрунту -->
             <StackPanel Orientation="Horizontal" Margin="0,5">
                 <TextBlock Text="Тип ґрунту:" Width="100"/>
-                <ComboBox x:Name="SoilComboBox" Width="200" 
-                          SelectionChanged="SoilComboBox_SelectionChanged" LostFocus="FieldDetails_LostFocus"/>
+                <ComboBox x:Name="SoilComboBox" Width="200" DisplayMemberPath="Name"
+                  SelectionChanged="SoilComboBox_SelectionChanged" LostFocus="FieldDetails_LostFocus"/>
             </StackPanel>
 
             <!-- Значення поживних речовин -->
@@ -43,37 +46,35 @@
                 <TextBlock Text="N:" Width="100"/>
                 <TextBox x:Name="CurrentNTextBox" Width="200" LostFocus="FieldDetails_LostFocus"/>
             </StackPanel>
-
             <StackPanel Orientation="Horizontal" Margin="0,5">
                 <TextBlock Text="P₂O₅:" Width="100"/>
                 <TextBox x:Name="CurrentP2O5TextBox" Width="200" LostFocus="FieldDetails_LostFocus"/>
             </StackPanel>
-
             <StackPanel Orientation="Horizontal" Margin="0,5">
                 <TextBlock Text="K₂O:" Width="100"/>
                 <TextBox x:Name="CurrentK2OTextBox" Width="200" LostFocus="FieldDetails_LostFocus"/>
             </StackPanel>
 
-            <!-- Культури -->
+            <!-- Поточна культура -->
             <StackPanel Orientation="Horizontal" Margin="0,5">
                 <TextBlock Text="Поточна культура:" Width="100"/>
-                <ComboBox x:Name="CurrentCropComboBox" Width="200" 
-                          DisplayMemberPath="Name" SelectionChanged="FieldDetails_SelectionChanged"/>
+                <ComboBox x:Name="CurrentCropComboBox" Width="200" DisplayMemberPath="Name"
+                  SelectionChanged="FieldDetails_SelectionChanged" DropDownClosed="CurrentCropComboBox_DropDownClosed"/>
             </StackPanel>
 
+            <!-- Минула культура -->
             <StackPanel Orientation="Horizontal" Margin="0,5">
                 <TextBlock Text="Минула культура:" Width="100"/>
-                <!-- Для року 0 можна вибирати вручну, для >0 - блокується -->
-                <ComboBox x:Name="PastCropComboBox" Width="200" 
-                          DisplayMemberPath="Name" SelectionChanged="FieldDetails_SelectionChanged"/>
+                <ComboBox x:Name="PastCropComboBox" Width="200" DisplayMemberPath="Name"
+                  SelectionChanged="FieldDetails_SelectionChanged" DropDownClosed="PastCropComboBox_DropDownClosed"/>
             </StackPanel>
 
             <!-- Кнопки -->
             <StackPanel Orientation="Horizontal" Margin="10">
-                <!-- Кнопку "Зберегти" видаляємо -->
                 <Button Content="Розрахувати" Width="100" Margin="0,0,10,0" Click="Calculate_Click"/>
                 <Button Content="Наступний рік" Width="100" Click="NextYear_Click"/>
             </StackPanel>
+
             <!-- Лічильник років -->
             <TextBlock x:Name="YearCounterTextBlock" Text="Рік: 0" FontWeight="Bold" Margin="10"/>
         </StackPanel>
