--- a/Agroculture/MainWindow.xaml
+++ b/Agroculture/MainWindow.xaml
@@ -63,15 +63,15 @@
                     <GroupBox Header="Поживні речовини" Margin="0,5">
                         <StackPanel Margin="5">
                             <StackPanel Orientation="Horizontal" Margin="0,5">
-                                <TextBlock Text="N:" Width="140" VerticalAlignment="Center"/>
+                                <TextBlock Text="N (мг/кг):" Width="140" VerticalAlignment="Center"/>
                                 <TextBox x:Name="CurrentNTextBox" Width="200" Margin="5" LostFocus="FieldDetails_LostFocus"/>
                             </StackPanel>
                             <StackPanel Orientation="Horizontal" Margin="0,5">
-                                <TextBlock Text="P₂O₅:" Width="140" VerticalAlignment="Center"/>
+                                <TextBlock Text="P₂O₅ (мг/кг):" Width="140" VerticalAlignment="Center"/>
                                 <TextBox x:Name="CurrentP2O5TextBox" Width="200" Margin="5" LostFocus="FieldDetails_LostFocus"/>
                             </StackPanel>
                             <StackPanel Orientation="Horizontal" Margin="0,5">
-                                <TextBlock Text="K₂O:" Width="140" VerticalAlignment="Center"/>
+                                <TextBlock Text="K₂O (мг/кг):" Width="140" VerticalAlignment="Center"/>
                                 <TextBox x:Name="CurrentK2OTextBox" Width="200" Margin="5" LostFocus="FieldDetails_LostFocus"/>
                             </StackPanel>
                         </StackPanel>
